<resources>
    <string name="app_name">Fruitastic</string>
    <string name="slogan">Scan your fruit here</string>

    <!--Bottom Navigation-->
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_setting">Settings</string>

    <!--Home Fragment-->
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="analyze">Analyze</string>
    <string name="image_preview">Image Preview</string>
    <string name="no_photo_selected">No photo selected</string>
    <string name="empty_image_warning">Please insert the image file first.</string>
    <string name="crop_button">Crop Button</string>
    <string name="result_title">Result:</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="input_your_feedback">Input your feedback</string>
    <string name="please_input_feedback_first">Please input feedback first</string>
    <string name="error_crop">Crop error</string>
    <string name="title_crop_image">Crop Image</string>

    <!--Item History-->
    <string name="result">Result</string>
    <string name="time">Time</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <!--Settings Fragment-->
    <string name="my_account">My Account</string>
    <string name="theme">Theme</string>
    <string name="value_theme">Value Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="save_icon">Save Icon</string>
    <string name="theme_icon">Theme Icon</string>
    <string name="value_save">Value Save</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="my_email">My Email</string>
    <string name="logout">Logout</string>
    <string name="auto_save_to_history">Auto save to history</string>
    <string name="email_invalid">Email Invalid</string>
    <string name="cancel">Cancel</string>
    <string name="title_alert_logout">Logout Confirmation</string>
    <string name="message_alert_logout">Are you sure you want to log out of your account? This will end your session.</string>
    <string name="value_language">Value Language</string>
    <string name="language">Language</string>
    <string name="language_icon">Language Icon</string>
    <string name="title_alert_language">Choose Language</string>
    <string name="language_indonesia">Bahasa Indonesia</string>
    <string name="language_english">English</string>
    <string name="ok">OK</string>

    <!--Welcome Activity-->-
    <string name="title_welcome_page">Welcome to Fruitastic!</string>
    <string name="message_welcome_page">Want to check the freshness of your fruit? Scan it on Fruitastic!</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>

    <!--Signup Activity-->-
    <string name="title_signup_page">Complete your information below</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="register_failed">Registration Failed</string>
    <string name="signup_success_title">Registration Successful!</string>
    <string name="signup_success_message">An account with email %1$s has been successfully registered. Log in and get started!</string>

    <!--Login Activity-->-
    <string name="message_login_page">Please enter your data first</string>
    <string name="title_login_page">Ready to scan your fruit?</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_success_title">Logged In Successfully!</string>
    <string name="login_success_message">An account with name %1$s has successfully logged in. Start scanning your fruit!</string>
    <string name="image">Image</string>
    <string name="next_button">Next</string>

    <!--Error Messages-->-
    <string name="error_empty_name">Name is required</string>
    <string name="error_empty_address">Address is required</string>
    <string name="error_invalid_email">Enter a valid email</string>
    <string name="error_password_short">Password must be at least 8 characters</string>
    <string name="network_error">Network error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="unknown">Unknown</string>
    <string name="prediction_successful">Prediction successful.</string>
    <string name="logo">Logo</string>

</resources>