<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="false"
    app:strokeWidth="0dp"
    app:cardBackgroundColor="?android:attr/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/image_preview"
            android:scaleType="centerCrop"
            android:layout_marginEnd="12dp"
            app:srcCompat="@drawable/placeholder"
            android:background="@drawable/rounded_image"
            android:clipToOutline="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:fontFamily="@font/nunito_700_bold"
            android:textColor="?attr/colorOnPrimary"
            android:background="@drawable/rounded_background"
            android:textSize="16sp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/ivImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivImage" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/time"
            android:fontFamily="@font/nunito_400_regular"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="14sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/ivImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvResult" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
